# containers-backpack

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  containers-backpack.cabal
app/: Main.hs
benchmark/: Main.hs
containers-benchmarks/: containers-benchmarks.cabal
containers-contrib/: CHANGELOG.md  containers-contrib.cabal
containers-contrib-readonly/: CHANGELOG.md  containers-contrib.cabal
containers-contrib-readonly/src/Map/Contrib/: Bench.hs  Laws.hs
containers-contrib/src/Map/Contrib/: Dummy.hs  Group.hs  Laws.hs
containers-example/: containers-example.cabal
containers-example/app/: Main.hs
containers-int-strict/: CHANGELOG.md  containers-int-strict.cabal
containers-int-strict/src/Map/: Int.hs
containers-ordered-strict/: CHANGELOG.md  containers-ordered-strict.cabal
containers-ordered-strict/src/Map/: Ord.hs
containers-primitive/: CHANGELOG.md  containers-primitive.cabal
containers-primitive/src/Map/: Prim.hs
containers-sig/: CHANGELOG.md  containers-sig.cabal
containers-sig-benchmarks/: CHANGELOG.md  containers-sig-benchmarks.cabal
containers-sig-benchmarks/src/: Main.hs
containers-sig-laws/: CHANGELOG.md  containers-sig-laws.cabal
containers-sig-laws/app/: Main.hs
containers-sig-readonly/: CHANGELOG.md  containers-sig-readonly.cabal
containers-sig-readonly/src/: Map.hsig
containers-unordered-strict/: CHANGELOG.md  containers-unordered-strict.cabal
containers-unordered-strict/src/Map/: Hash.hs
map-containers/: map-containers.cabal
map-containers-intmap/: CHANGELOG.md  map-containers-intmap.cabal
map-containers-intmap/src/Map/: IntMap.hs
map-containers-map/: CHANGELOG.md  map-containers-map.cabal
map-containers-map/src/Map/: Map.hs
map-containers/src/Map/: IntMap.hs  Map.hs
map-contrib/: CHANGELOG.md  map-contrib.cabal
map-contrib/src/Map/Contrib/: Dummy.hs  Group.hs
map-example/: CHANGELOG.md  map-example.cabal
map-example/app/: Main.hs
map-example/src/: Dummy.hs
map-sig/: CHANGELOG.md  map-sig.cabal
map-sig-extended/: CHANGELOG.md  map-sig-extended.cabal
map-sig-extended/src/: Map.hsig
map-sig/src/: Map.hsig  ROMap.hsig
map-unordered/: CHANGELOG.md  map-unordered.cabal
map-unordered/src/Map/: HashMap.hs
src/benchmarks/Map/: Bench.hs
src/contrib/Map/Contrib/: Group.hs
src/int-strict/Map/: Int.hs
src/laws/Map/: Laws.hs
src/ordered-strict/Map/: Ord.hs
src/primitive/Map/: Prim.hs
src/sig/: Map.hsig
src/unordered-strict/Map/: Hash.hs
test/: Main.hs
